--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,8 @@
     <meta charset="UTF-8">
     <base href="/">
     <title>Universal Test</title>
+    <link href="https://unpkg.com/bootstrap@4.0.0-alpha.6/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://unpkg.com/angular-calendar@0.17.4/dist/css/angular-calendar.css" rel="stylesheet">
   </head>
   <body>
     <demo-app></demo-app>
